# H4CK3R5-D0C

./: .replit  J.html  J.py  J.sh  J.txt  README.md  main.py  main.spec  pyproject.toml
appFile/Linux/: Run.md
appFile/Windows/: DISCLAIMER.md
src/: function.py  main.py
