[tool.poetry]
name = "H4CK3R5-D0C"
version = "1.0.3"
description = ""
authors = ["@JordanDixon1 <jordandixon2004@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
